[gd_scene load_steps=13 format=3 uid="uid://cf8dxr558c1x0"]

[ext_resource type="Texture2D" uid="uid://cu2v3t1jwct2b" path="res://Assets/sprites/HBDB_Cultist_Swarm-Sheet.png" id="1_5sm5d"]
[ext_resource type="Script" path="res://Scenes/cultists.gd" id="1_ijcws"]
[ext_resource type="Texture2D" uid="uid://bggj35by5ehiw" path="res://Assets/sprites/cultists_alert_symbol.png" id="3_wrmis"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2siup"]
atlas = ExtResource("1_5sm5d")
region = Rect2(0, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_h673l"]
atlas = ExtResource("1_5sm5d")
region = Rect2(45, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u0im"]
atlas = ExtResource("1_5sm5d")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypuwx"]
atlas = ExtResource("1_5sm5d")
region = Rect2(135, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qup5q"]
atlas = ExtResource("1_5sm5d")
region = Rect2(180, 0, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_mn5nx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2siup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h673l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u0im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypuwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qup5q")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ken44"]
size = Vector2(25, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1l7d"]
size = Vector2(284, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te0ij"]
size = Vector2(31, 20)

[node name="Cutists" type="CharacterBody2D"]
position = Vector2(0, -22.5)
script = ExtResource("1_ijcws")

[node name="Cultists" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mn5nx")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.550604

[node name="AlertSymbol" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_wrmis")

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 12.5)
shape = SubResource("RectangleShape2D_ken44")

[node name="Sightbox" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sightbox"]
position = Vector2(0, -20.5)
shape = SubResource("RectangleShape2D_o1l7d")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2(-1.5, 12.5)
shape = SubResource("RectangleShape2D_te0ij")

[node name="LedgeDetector" type="RayCast2D" parent="."]
position = Vector2(20, 10)
target_position = Vector2(0, 20)

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(32, 0)

[connection signal="body_entered" from="Sightbox" to="." method="_on_sightbox_body_entered"]
[connection signal="body_exited" from="Sightbox" to="." method="_on_sightbox_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
